	* Fixed bug #14793: htmlArea RTE: Problematic icons in IE6
	* Fixed bug #14812: htmlArea RTE: Path to acronym record icon is not correct (Thanks to Helmut Hummel)

2010-06-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8893: eval "timesec" sets seconds to zero (Thanks to Ralf Hettinger and Andy Grunwald)

2010-06-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14752: #14798: Sitename missing in Login form
	* Fixed bug #14752: Add Update Wizards for Skinning Changes (Thanks to Jigal van Hemert)
	* Fixed bug #14800: JS errors prevent JS pased popups from working in IE (Thanks to Jo Hasenau)
	* Fixed bug #14808 tceforms.js slows down performance of IE dramatically (Thanks to Jo Hasenau)
	* Fixed bug #14721: Flexform sections are unstyled and look weird
	* Fixed bug #11543: Shortcuts broken if current directory is not in include path (Thanks to Mads Chr. Olesen)

2010-06-20  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0RC2

2010-06-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14797: htmlArea RTE: Toolbar combo boxes do not float left in IE6 (Thnaks to Jigal van Hemert).

2010-06-20  Susanne Moog  <typo3@susanne-moog.de>

	* Followup to #14636: Improvements to new Backend skin - Install tool login shadow fixed 
	* Fixed bug #14516: Strip background gradients - smaller image size and no wrong colors in browsers with color profile capability (Thanks to Helmut Hummel)
	* Followup to #14465: Make use of the new Sprite API - help in backend access lists (Thanks to Steffen Ritter)
	* Followup to #14465: Make use of the new Sprite API - delete icon in QuickEdit (Thanks to Steffen Gebert)
	* Followup to #14465: Make use of the new Sprite API - sys_language, sys_action (Thanks to Steffen Ritter)
	* Fixed bug #14788: Add fallback graphics for CSS3 background gradients (Thanks to Steffen Gebert)
	* Fixed bug #14755: Step 2 - Select method should be radio choice (On behalf of Steffen Kamper)